src/test/ui/rust-2018/local-path-suggestions.stderr
error[E0432]: unresolved import `foo`
  --> $DIR/local-path-suggestions.rs:20:9
   |
LL |     use foo::Bar;
   |         ^^^ Did you mean `crate::foo`?

error[E0432]: unresolved import `foo`
  --> $DIR/local-path-suggestions.rs:27:5
   |
LL | use foo::Bar;
   |     ^^^ Did you mean `self::foo`?

error[E0432]: unresolved import `foobar`
  --> $DIR/local-path-suggestions.rs:29:5
   |
LL | use foobar::Baz;
   |     ^^^^^^ Did you mean `baz::foobar`?

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0432`.
